# WebroamerOS

./: .editorconfig  CODE-OF-CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vitest.config.ts
apps/os/back-end/: .env.example  .gitignore  Cargo.toml
apps/os/back-end/migrations/: 20260415213847_add_user_and_session_table.sql
apps/os/back-end/src/: db.rs  main.rs  middleware.rs  state.rs
apps/os/back-end/src/api/: mod.rs  system.rs  terminal.rs
apps/os/back-end/src/api/auth/: mod.rs  types.rs  utils.rs
apps/os/front-end/: index.html  package.json  tsconfig.json  vite.config.js
apps/os/front-end/public/assets/css/: style.css
apps/os/front-end/src/: App.ts  App.vue  main.ts
apps/os/front-end/src/api/: auth.ts  index.ts  system.ts
apps/os/front-end/src/apps/about/: about-pc.ts
apps/os/front-end/src/apps/options/: system-options.ts
apps/os/front-end/src/components/system/: auth-view.styles.ts  auth-view.ts  screen.ts  setup-view.styles.ts  setup-view.ts  start-menu.styles.ts  start-menu.ts  status-bar.ts  system-view.ts  task-bar.ts  toast-provider.ts
apps/os/front-end/src/components/window/: system-window.ts  window-manager.ts
apps/os/front-end/src/locale/: locale.json
apps/os/front-end/src/router/: index.ts
apps/os/front-end/src/shared/directives/: tooltip.ts
apps/os/front-end/src/shared/signals/: auth.ts  settings.ts  toast.ts  utils.ts  wm.ts
apps/os/front-end/src/shared/types/: api-helpers.d.ts  api.d.ts
apps/os/front-end/src/views/: Home.vue
(+3 files in other folders)
