[package]
name = "webroamer-back-end"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

tower = "0.5"
tower-http = { version = "0.6", features = [
  "cors",
  "trace",
  "compression-full",
] }

sysinfo = "0.33"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

anyhow = "1.0"

utoipa = { version = "5.0", features = ["axum_extras"] }

pty-process = { version = "0.4", features = ["async", "tokio"] }

futures-util = "0.3"
